examples/good/booleans.hmy
service_name: BooleanTest
service_version: 1.0.0

struct Struct1 {
  b : Boolean
}

resource Struct1 ("/struct")
