examples/bad/route_clash.hmy
service_name: duplicate_routes
service_version: 1.0.0

struct Str1 { str1 : String }
struct Str2 { str2 : Int }

resource Str1 ("/struct")
resource Str2 ("/struct")
